# CIC_Testing

./: .~lock.CIC_QA_QC.ods#  Backup_with_working_sent.txt  CIC_QA_QC.ods  README.md  reding_ADC.txt  requirements.txt
Arduiono_Shield/: CMakeLists.txt
Arduiono_Shield/main/: main.ino
Arduiono_Shield/main/src/can_handler/: can_handler.cpp  can_handler.h
ESP_Firmware/main/: main.ino
ISO_Test_ADC_CIC/: ISO_Test_ADC_CIC.ino
ISO_Test_ADC_CIC/CIC_SPI_C_M/: CIC_SPI_C_M.ino
ISO_Tests/CIC_SPI_C_M/: CIC_SPI_C_M.ino
ISO_Tests/I2C_Scanner/: I2C_Scanner.ino
ISO_Tests/STEP_BY_STEP/: STEP_BY_STEP.ino  STEP_BY_STEP.py  config.json
PC_Controller/: REDME.md  TODOs.py  config.jason  main.py
PC_Controller/lib/: csv_logger.py  individual_tests.py  sequence_tester.py  serial_handler.py
PC_Controller/test_results/: CIC_QC_1111_Voltage_20250825_115047.csv  CIC_QC_11234_Voltage_20250825_115459.csv  CIC_QC_11234_Voltage_20250825_115727.csv  CIC_QC_1127_Voltage_20250825_112751.csv  (+9 more)
PC_Firmware/: config.json  main.py  requirements.txt
QC_Tester_Firmware/: CMakeLists.txt
QC_Tester_Firmware/main/: main.ino
QC_Tester_Firmware/main/src/channel_a/: channel_a.cpp  channel_a.h
QC_Tester_Firmware/main/src/channel_b/: channel_b.cpp  channel_b.h
QC_Tester_Firmware/main/src/cic_control/: cic_adc.cpp  cic_adc.h
QC_Tester_Firmware/main/src/comms/: comms.cpp  comms.h
QC_Tester_Firmware/main/src/config/: config.h
QC_Tester_Firmware/main/src/roles/: roles.h
QC_Tester_Firmware/main/src/slave_flasher/: slave_flasher.cpp  slave_flasher.h
docs/: CIC_QA_QC.ods
(+50 files in other folders)
